# eth1-mock-rpc

./: .bazelrc  BUILD.bazel  Dockerfile  LICENSE  README.md  WORKSPACE  contract.go  deposits.go  depositsAndKeys.yaml  genkeys.sh  json.go  keystore.go  keystore_test.go  main.go  unencrypted_keys.json  websocket.go
eth1/: BUILD.bazel  contract.go  deposits.go  eth1_handlers.go  eth1_handlers_test.go
