load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

prefix = "github.com/prysmaticlabs/eth1-mock-server"

# gazelle:prefix github.com/prysmaticlabs/prysm
gazelle(
    name = "gazelle",
    prefix = prefix,
)

go_library(
    name = "go_default_library",
    srcs = [
        "json.go",
        "keystore.go",
        "main.go",
        "websocket.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "//eth1:go_default_library",
        "@com_github_prysmaticlabs_prysm//shared/keystore:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
        "@org_golang_x_net//websocket:go_default_library",
    ],
)

go_binary(
    name = "eth1-mock-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    srcs = [
        "main.go",
        "json.go",
        "deposits.go",
    ],
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/prysmaticlabs/eth1-mock-server",
    pure = "on",
    race = "off",
    static = "on",
    tags = ["manual"],
    visibility = ["//visibility:private"],
)

container_push(
    name = "push_image",
    format = "Docker",
    image = ":image",
    registry = "gcr.io",
    repository = "prysmaticlabs/prysm/eth1-mock-server",
    tag = "{DOCKER_TAG}",
    tags = ["manual"],
    visibility = ["//visibility:private"],
)
