load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

prefix = "github.com/prysmaticlabs/eth1-mock-rpc"

# gazelle:prefix github.com/prysmaticlabs/eth1-mock-rpc
gazelle(
    name = "gazelle",
    prefix = prefix,
)

go_library(
    name = "go_default_library",
    srcs = [
        "json.go",
        "keystore.go",
        "main.go",
        "websocket.go",
    ],
    importpath = "github.com/prysmaticlabs/eth1-mock-rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//eth1:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//event:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_pkg_profile//:go_default_library",
        "@com_github_prysmaticlabs_prysm//shared/keystore:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
        "@org_golang_x_net//websocket:go_default_library",
    ],
)

go_binary(
    name = "eth1-mock-rpc",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    srcs = [
        "main.go",
        "json.go",
        "keystore.go",
        "websocket.go",
    ],
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/prysmaticlabs/eth1-mock-rpc",
    pure = "off",
    race = "off",
    static = "off",
    tags = ["manual"],
    visibility = ["//visibility:private"],
    deps = [
        "//eth1:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//event:go_default_library",
        "@com_github_prysmaticlabs_prysm//shared/keystore:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
        "@org_golang_x_net//websocket:go_default_library",
    ],
)

container_push(
    name = "push_image",
    format = "Docker",
    image = ":image",
    registry = "gcr.io",
    repository = "prysmaticlabs/prysm/eth1-mock-rpc",
    tag = "{DOCKER_TAG}",
    tags = ["manual"],
    visibility = ["//visibility:private"],
)

go_test(
    name = "go_default_test",
    srcs = ["keystore_test.go"],
    embed = [":go_default_library"],
    deps = ["//eth1:go_default_library"],
)
